[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scirtp/ball.gd" type="Script" id=1]
[ext_resource path="res://assets/sonidos/POKTU.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/models/jalkapallo.tres" type="ArrayMesh" id=3]
[ext_resource path="res://assets/texturs/PALO1.png" type="Texture" id=4]
[ext_resource path="res://assets/sonidos/ÖÖÖ.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sonidos/fast balls.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sonidos/bonk.wav" type="AudioStream" id=7]

[sub_resource type="PhysicsMaterial" id=3]
bounce = 0.68

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 4 )

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereShape" id=2]
radius = 1.01744

[node name="ball" type="Spatial"]
script = ExtResource( 1 )

[node name="RigidBody" type="RigidBody" parent="."]
mass = 2.0
physics_material_override = SubResource( 3 )
axis_lock_linear_z = true
angular_velocity = Vector3( 8, 8, 0 )

[node name="jalkapallo" type="MeshInstance" parent="RigidBody"]
transform = Transform( 0.577182, 0, 0, 0, 0.577182, 0, 0, 0, 0.577182, 0, 0, 0 )
material_override = SubResource( 4 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = null
__meta__ = {
"_edit_group_": true
}

[node name="ballgoalbonksound" type="AudioStreamPlayer3D" parent="RigidBody"]
stream = ExtResource( 7 )
unit_db = 20.0

[node name="ballKickSound" type="AudioStreamPlayer3D" parent="RigidBody"]
stream = ExtResource( 2 )
unit_db = 30.0

[node name="ballbounceSound" type="AudioStreamPlayer3D" parent="RigidBody"]
stream = ExtResource( 5 )
unit_db = 20.0

[node name="fastball" type="AudioStreamPlayer3D" parent="RigidBody"]
stream = ExtResource( 6 )
unit_db = 30.0
doppler_tracking = 2

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 1 )

[node name="soundArea" type="Area" parent="RigidBody"]

[node name="CollisionShape" type="CollisionShape" parent="RigidBody/soundArea"]
shape = SubResource( 2 )

[connection signal="area_entered" from="RigidBody/soundArea" to="." method="_on_soundArea_area_entered"]
[connection signal="body_entered" from="RigidBody/soundArea" to="." method="_on_soundArea_body_entered"]
